@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: makehyper.c,v 1.10 2006/12/06 23:12:52 c_anthon Exp $
+ * $Id: makehyper.c,v 1.11 2007/01/25 19:29:41 c_anthon Exp $
  */
 
 #include "config.h"
@@ -45,6 +45,19 @@ char *aszRNG[];
 char *aszSkillType[ 1 ]; 
 int exsExport;
 int ap;
+extern void MT_Lock(long *lock)
+{
+}
+
+extern void MT_Unlock(long *lock)
+{
+}
+
+extern int MT_GetThreadID()
+{
+  return (0);
+}
+
 /* end ugly fixes */
 
 typedef enum _hyperclass {
