@@ -1,3 +1,8 @@
+Sun Feb 11 22:18:33 CET 2007 Christian Anthon <anthon@kiku.dk>
+
+	* bearoffdump.c, eval.c, makebearoff.c, makehyper.c, rollout.c: small fixes
+	to let gnubg and tools compile without warnings.
+
 Thu Feb 08 19:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* multithread.c, rollout.c : Multi-thread rollouts.
